--- a/service.yml
+++ b/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-svc
+  name: codemi-spring-svc
 spec:
   selector:
     role: app
@@ -9,5 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8080
-      nodePort: 32000
   type: LoadBalancer
