--- a/deployment.yml
+++ b/deployment.yml
@@ -30,18 +30,18 @@ spec:
           limits:
             cpu: "500m"
             memory: "650Mi"
-        # livenessProbe:
-        #   httpGet:
-        #     path: /health
-        #     port: http-port
-        #   initialDelaySeconds: 90
-        #   timeoutSeconds: 10
-        # readinessProbe:
-        #   httpGet:
-        #     path: /health
-        #     port: http-port
-        #   initialDelaySeconds: 60
-        #   timeoutSeconds: 10   
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: http-port
+          initialDelaySeconds: 90
+          timeoutSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: http-port
+          initialDelaySeconds: 60
+          timeoutSeconds: 10   
         ports:
         - containerPort: 8080
           name: http-port
